# bridgecal-sync-agent

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.ja.md  README.md  START_HERE_JA.txt  pyproject.toml
config/: config.example.toml
docs/: AGENTS.md  architecture.md  ceo-setup-ja.md  codex-prompt.txt  index.md  privacy-and-sharing.md  requirements.md  runbook.md  security.md  setup.md  sync.md  troubleshooting.md  voice-ui.md
docs/adr/: 0001-local-agent.md  0002-loop-prevention-markers.md
docs/exec-plans/: PLANS.md
docs/exec-plans/active/: availability-thinking-model-selector.md  core-sync-implementation.md  voice-availability-popup.md
scripts/: deploy-bridgecal.ps1  lfm_schedule_parse_probe.py  run-bridgecal-daemon.ps1  run-bridgecal-gui.ps1
src/: AGENTS.md
src/bridgecal/: __init__.py  availability.py  cli.py  config.py  google_client.py  gui_app.py  logging_config.py  outlook_client.py  paths.py  voice_stt.py  windows_scheduler.py
src/bridgecal/commands/: availability.py  doctor.py  gui.py  sync.py
src/bridgecal/sync/: __init__.py  engine.py  mapping.py  models.py
tests/: test_availability.py  test_config.py  test_doctor.py  test_engine.py  test_google_client.py  test_gui_command.py  test_logging_config.py  test_outlook_client.py  test_voice_stt.py  test_windows_scheduler.py
