[project]
name = "bridgecal"
version = "0.1.0"
description = "Single-user Outlook ↔ Google Calendar sync agent (local, Windows)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "BridgeCal Maintainers" }]
dependencies = [
  "typer>=0.12.0",
  "google-api-python-client>=2.120.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  # Outlook COM automation (Windows only)
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
bridgecal = "bridgecal.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.8.0",
  "ruff>=0.6.0",
  "types-requests>=2.32.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bridgecal"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = ["src"]
